--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,8 +2,8 @@ name: Update README
 
 on:
   schedule:
+    # Runs every 30 minutes
     - cron: '*/30 * * * *'
-  workflow_dispatch:
 
 jobs:
   build:
@@ -15,4 +15,3 @@ jobs:
       - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
