⚡ Update this repo's README with Snake

--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: ⚡ Update this repo's README with Snake
     steps:
       - uses: actions/checkout@v2
       - uses: Platane/snk@master
