--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -1,7 +1,7 @@
 name: Latest YouTube Videos
 on:
   schedule:
-    # Runs every hour
+    # Runs every 1 hour
     - cron: '0 * * * *'
   workflow_dispatch:
 
