--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -4,6 +4,9 @@ on:
     # Runs every 6 hours
     - cron: "0 */6 * * *"
   workflow_dispatch:
+  push:
+    branches:
+    - master
 
 jobs:
   build:
@@ -14,7 +17,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: mishmanners
+          github_user_name: MasterCoder1234567890
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
@@ -27,7 +30,7 @@ jobs:
           branch: master
           force: true
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
           target_branch: output
           build_dir: dist
