--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Generate README.md
       uses: teoxoy/profile-readme-stats@v1.1
       with:
-        token: ${{ secrets.USER_TOKEN }}
+        token: ${{ secrets.PROJECT_STATS_TOKEN }}
         includeForks: true
     - name: Update README.md
       run: |
