--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: MasterCoder1234567890
+          github_user_name: CodingAce123
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
